19 Jul 2002 Fix to cpu utilization percentage - Greg Smith
17 Jul 2002 New utility dasdcopy.c; replaces ckd2cckd and cckd2ckd and
            adds fba2cfba and cfba2fba function - Greg Smith
16 Jul 2002 New 'hmccmds.c' source module #included by 'panel.c'. - Fish
14 Jul 2002 UNTABBED all .c/.h source files (NO EMBEDDED TABS, please!) - Fish
14 Jul 2002 ** MAJOR CLEANUP ** Added -W compile option to see ALL warnings and
            corrected most signed/unisgned and unreferenced warnings; only
            'ckddasd', 'cckddasd' and 'cckdutil' remain to be cleaned up - Fish
13 Jul 2002 Fix dasdutil.c to correctly detecte write error im created_ckd_file - Volker Bandke
11 Jul 2002 File integrity fixes for compressed dasd - Greg Smith
11 Jul 2002 New optional HTTPROOT control file statement - Fish
09 Jul 2002 Minor fix to OPTION_CPU_UTILIZATION to fix FISH_HANG issue - Fish
02 Jul 2002 Fixes to ckdtab in dasdtab.c - Greg Smith
02 Jul 2002 Correct Erase All Unprotected 3270 order - Tomas Fott
01 Jul 2002 Complete IPL function in web interface - Jan Jaeger
30 Jun 2002 Fix minor "inet_ntoa" bug in 'connect_client' function
            reported by Mark Gaubatz [Mark.Gaubatz@verizon.net] - Fish
30 Jun 2002 Fix some minor issues relating to tape device handling contributed
            by hackules (http://www.geocities.com/hackules390/): - Fish
            h31: Fixes a problem with HET tapes on CD.
            h23: A minor fix to tapedev that corrects the setting of the chunk
                 size for HET files.
            h09: Fixes a small bug in tapedev.c where a backspace file operation
                 could muck up position info if already positioned at the start
                 of the file.
30 Jun 2002 Calculate percent CPU utilization - Fish
29 Jun 2002 Gabor Hoffer performance patch: part 3 - Fish
27 Jun 2002 Fix validation intercept when no S/370 mode installed - Jan Jaeger
27 Jun 2002 Fix scpinfo CHSC bit - Jan Jaeger